--- a/WordRunnerSmartwatch/app/build.gradle
+++ b/WordRunnerSmartwatch/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.apps.greyrobe.wordrunnersmartwatchandroid"
+        applicationId "com.apps.greyrobe.wordrunner"
         minSdkVersion 25
         targetSdkVersion 25
         versionCode 1
