Basic Wearable OAuth2 with paired Phone

--- a/WordRunnerSmartwatch/app/src/main/AndroidManifest.xml
+++ b/WordRunnerSmartwatch/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-feature android:name="android.hardware.type.watch" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
         <activity
-            android:name="com.apps.greyrobe.wordrunner.MainActivity"
+            android:name=".MyGoogleBooksLibrary"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
