Reorganized code, added library retrieval, added refresh token functionality

--- a/WordRunnerSmartwatch/app/src/main/AndroidManifest.xml
+++ b/WordRunnerSmartwatch/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
         <activity
-            android:name=".MyGoogleBooksLibrary"
+            android:name=".activities.MyGoogleBooksLibrary"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".activities.MainActivity"></activity>
     </application>
 
 </manifest>
