--- a/WordRunnerSmartwatch/app/build.gradle
+++ b/WordRunnerSmartwatch/app/build.gradle
@@ -21,8 +21,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:2.0.1'
+    compile 'com.google.android.wearable:wearable:2.0.1'
     compile 'com.google.android.gms:play-services-wearable:10.2.4'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.github.mertakdut:EpubParser:1.0.95'
 }
